[metadata]
name = portf
version = 0.1.1
author = Saigenix
author_email = sainathkumar805@gmail.com
description = A pyhton packages for creating portfolio site within minutes!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Saigenix/portf
project_urls =
    Bug Tracker = https://github.com/Saigenix/portf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = flask
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
portf.templates =
    *.html
mypkg.static =
    *.txt